nav bar , aims and small fixes
nav bar  scroll bug on mobile fixed

aims replaced with objective and incubation centre added

made headings of consistent size

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul class="links">
             <li> <a href="#home">Home </a> </li>
                 <li> <a href="#about">About us </a> </li>
-                <li> <a href="#aims">Aims</a> </li>
+                <li> <a href="#objective">Objectives</a> </li>
                 <li> <a href="./events/index.html">Events </a> </li>
                 <li> <a href="#testimony">Testimony</a> </li>
                 <li> <a href="#contactus">Contact Us </a> </li>
@@ -97,16 +97,16 @@
     </section>
 
 
-        <!-- AIMS SECTION  -->
-        <section class="aims-section" id="aims">
+        <!-- OBJECTIVE SECTION  -->
+        <section class="objective-section" id="objective">
             <h3>
-                Aims
+                Objectives
             </h3>
-            <div class="aims-wrapper">
+            <div class="objective-wrapper">
 
                 <!-- Awareness -->
                 <div class="cards">
-                    <div class="aims-img-cont">
+                    <div class="objective-img-cont">
                         <img src="./src/assets/images/awareness.png" alt="" height="100%" width="100%" />
                     </div>
                     <div class="card-details">
@@ -119,7 +119,7 @@
                 </div>
                 <!-- Motivation -->
                 <div class="cards">
-                    <div class="aims-img-cont">
+                    <div class="objective-img-cont">
                         <img src="./src/assets/images/motivation.png" alt="" height="100%" width="100%" />
                     </div>
                     <div class="card-details">
@@ -133,7 +133,7 @@
                 </div>
                 <!-- Mentorship -->
                 <div class="cards">
-                    <div class="aims-img-cont">
+                    <div class="objective-img-cont">
                         <img src="./src/assets/images/mentorship.png" alt="" height="100%" width="100%" />
                     </div>
                     <div class="card-details">
@@ -147,16 +147,14 @@
                 </div>
                 <!-- Guidance -->
                 <div class="cards">
-                    <div class="aims-img-cont">
+                    <div class="objective-img-cont">
                         <img src="./src/assets/images/guidance.png" alt="" height="100%" width="100%" />
                     </div>
                     <div class="card-details">
-                        <h4>Guidance & Support</h4>
+                        <h4>Incubation Centres</h4>
                         <p>
-                            To ensure that each E-Cell member and aspiring entrepreneurs receive well-informed
-                            direction, impartial
-                            assistance, and inspiring advice.
-                        </p>
+                            To provide start-ups with technical assistance, infrastructure, and a variety of other resources that may be needed for the start-up to survive and scale.
+                       </p>
                     </div>
                 </div>
             </div>
