--- a/team/index.html
+++ b/team/index.html
@@ -33,7 +33,7 @@
         <ul class="links">
             <li> <a href="#home">Home </a> </li>
                 <li> <a href="#about">About us </a> </li>
-                <li> <a href="#aims">Aims</a> </li>
+                <li> <a href="#objective">Objectives</a> </li>
                 <li> <a href="./events/index.html">Events </a> </li>
                 <li> <a href="#testimony">Testimony</a> </li>
                 <li> <a href="#contactus">Contact Us </a> </li>
