about section updated

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -60,14 +60,8 @@
       <img src="./IMG_7118.jpg">
       <div class="all-text">
           <h1>About the Event</h1>
-              <p>Food fiesta is an event to explore varieties of food where food stalls are set up by students themselves and explore their entrepreneurship skills, all under a single campus.
-                  Here, we reunite, eat together and develop new skills.
-               </p>
-               <p>
-                Food Fiesta, is a foodie and friendly event that offers a platform to pitch and sell food products as a one-on-one business individual.
-                As we all know Love for food makes each dish extraordinary.
-                The motto of Food Fiesta is that If someone sincerely loves food and he/she is passionate about transforming it from an average dish to an extraordinary business then this event is a platform to show their talent.
-               </p>
+              <p>Food Fiesta is one of the most loved and awaited event of SAKEC family. It is a foodie and friendly event that offers you a platform to pitch and sell your food products as a one-on-one business individual. You can experience the thrill of street food with a variety of flavours. </p>
+               <p>Food Fiesta aims to provide a potential platform for the youth to showcase their innovative foody ideas and ventures it to a worthy experience along with capital.Packaged or readymade food weren’t encouraged so the participants had to prepare them on spot. The entrepreneurship spirit was pumped and rouse to a high extent as the participants started selling food items in spite the challenges such as producing the dishes quick for the audience, managing the coupons and so on. This event was an escape from the typical, an appetite of pride where taste met excellence. </p>
       </div>
   </div>
 </section>
