events page podcast links added

--- a/events/index.html
+++ b/events/index.html
@@ -66,9 +66,13 @@
             <h1>Epitome of Leaders</h1>
 
             <p> E-Cell SAKEC is pleased to bring to you SAKEC'S very first active podcast series, 'Epitome of Leaders' where we invite thriving Entrepreneurs to share their story and inspire us to be our most ideal selves.</p>
-            <p class="read-more">
-                <a href="https://www.youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ/featured" target="_blank">View Podcast <i class="bi bi-arrow-right-short" style="color: green;"></i></a>
-                
+            <div class="podcast-links">
+                <a href=" https://www.youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ "><img src='./img/utube.png' class="podcast-icons"></a>
+                <a href="https://open.spotify.com/show/3OSAraUUX2OgsY8hstzd4l?si=iHybg1G7Tr6IBPd6gnGcGw&utm_source=copy-link "><img src='./img/spotify.png' class="podcast-icons"></a>
+                <a href="https://music.amazon.in/podcasts/414fb720-24ed-4c12-90bf-05ded48178fc/epitome-of-leaders?ref=dm_sh_RyfO52I8BmyNw4e06ZIoNOrbq "><img src='./img/amusic.png' class="podcast-icons"></a>
+            </div>
+            <p class="read-more ">
+                <a href="# " target="_blank ">Read More <i class="bi bi-arrow-right-short " style="color: green; "></i></a>
             </p>
         </div>
     </div>
@@ -171,7 +175,7 @@
             </ul>-->
         </div>
         <div class="description">
-            <h1>Beach Cleaning</h1>
+            <h1>India4Oceans × E-CELL SAKEC</h1>
 
             <p>A CSR initiative by E-Cell in collaboration with India4Oceans where the members visited Juhu Beach and cleaned it up in hopes to make India a cleaner and greener place to live in as well as inspire others to keep their surroundings clean.
                 This event was also attended by personalities like Atul Khatri to spread as much awareness as possible.</p>
