foodfiesta footer spelling mistake fixed

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -442,7 +442,7 @@
         </a>
       </div>
       <h5>
-        entreupreneurship and inovation cell | SAKEC
+        entreupreneurship and innovation cell | SAKEC
       </h5>
     </div>
   </footer>
