nav logo spacing increased and made it visible on mobile

--- a/team/index.html
+++ b/team/index.html
@@ -19,7 +19,7 @@
 <body>
     <nav>
         <input id="nav-toggle" type="checkbox">
-        <div>
+        <div class="logo-wrapper">
             <a href="https://www.shahandanchor.com/home/" target="_blank">
                 <img src="../common/img/sakec_logo_BLACK.png" alt="logo" class="logo  sakec-logo">
               </a>
