changed footer student council head

--- a/faq/index.html
+++ b/faq/index.html
@@ -174,7 +174,7 @@
               </div>
 
               <div class="contact-card">
-                  <h4>Ashish Shetty (E-Cell Council head)</h4>
+                  <h4>Ashish Shetty (Student Council head)</h4>
                   <div class="contact-content">
                       <div class="email-area">
                           <i class="bi bi-envelope-fill"></i>
