--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -385,8 +385,7 @@
                     <h4>Prof. Milind Khairnar (Faculty Incharge)</h4>
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
-                        <a href="mailto:milind.khairnar@sakec.ac.in"
-                            style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
+                        <a href="mailto:milind.khairnar@sakec.ac.in" style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
                     </div>
                     <div class="phone-area">
                         <i class="bi bi-telephone-fill"></i>
@@ -395,12 +394,11 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>Ashish Shetty (E-Cell Council head)</h4>
+                    <h4>Ashish Shetty (Student Council head)</h4>
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
-                            <a href="mailto:ashish.shetty@sakec.ac.in"
-                                style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
+                            <a href="mailto:ashish.shetty@sakec.ac.in" style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
                         </div>
                         <div class="phone-area">
                             <i class="bi bi-telephone-fill"></i>
@@ -411,15 +409,15 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>For other queries :</h4>
+                    <h4>For Other Queries Contact Us At :</h4>
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
                         <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">ecell@sakec.ac.in</a>
                     </div>
-                    <!-- <div class="phone-area">
-                        <i class="bi bi-telephone-fill"></i>
-                         <p>+91 93223 19066</p>
-                    </div> -->
+                    <div class="phone-area">
+                        <!-- <i class="bi bi-telephone-fill"></i> -->
+                        <!-- <p>+91 93223 19066</p> -->
+                    </div>
                 </div>
             </div>
         </div>
