--- a/team/index.html
+++ b/team/index.html
@@ -37,7 +37,7 @@
                 <li> <a href="./events/index.html">Events </a> </li>
                 <li> <a href="#testimony">Testimony</a> </li>
                 <li> <a href="#contactus">Contact Us </a> </li>
-                <li> <a href="./team/index.html">Our Team</a> </li>
+                <li> <a href="./index.html">Our Team</a> </li>
           
 
         </ul>
@@ -1351,7 +1351,6 @@
     </section>
 
     
-
     <footer id="contact">
         <div class="footer-wrapper">
             <h1>Get in touch with us</h1>
@@ -1369,7 +1368,7 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>Ashish Shetty (E-Cell Council head)</h4>
+                    <h4>Ashish Shetty (Student Council head)</h4>
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
