project pillar update

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Pillar</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 
@@ -22,21 +22,21 @@
 
             <div id="nav-header" class="nav-header">
                 <div class="logo">
-                    <img src="./src/assets/svg/Ecell-Sakec-Logo.svg" alt="sakec ecell logo" width="100%" height="100%" />
+                    <img src="/src/assets/svg/Ecell-Sakec-Logo.svg" alt="sakec ecell logo" width="100%" height="100%" />
                 </div>
                 <div id="toggle" class="nav-toggle">
                     <span id="toggle-span"></span><span id="toggle-span"></span><span id="toggle-span"></span>
                 </div>
             </div>
             <ul id="nav-links" class="nav-links-disable">
-                <li> <a id="nav-a" href="../index.html">Home </a> </li>
+                <li> <a id="nav-a" href="https://ecellhome.pages.dev/">Home </a> </li>
                 <li> <a id="nav-a" href="#about">About </a> </li>
                 <li> <a id="nav-a" href="#incentives">Incentives</a> </li>
                 <li> <a id="nav-a" href="#sponsors">Sponsors </a> </li>
                 <li> <a id="nav-a" href="#timeline">Timeline </a> </li>
                 <!-- <li> <a id="nav-a" href="#registration">Registration </a> </li> -->
                 <li> <a id="nav-a" href="#contact">Contact Us </a> </li>
-                <li> <a id="nav-a" href="../projectpillar/faq/index.html" target="_blank"
+                <li> <a id="nav-a" href="https://ecellhome.pages.dev/projectpillar/faq/" target="_blank"
                         rel="noopener noreferrer">FAQ</a> </li>
             </ul>
         </div>
@@ -247,7 +247,7 @@
 
                 <div class="row row-1">
                     <div class="icons icons-1">
-                        <img src="./src/assets/svg/home-2.svg" alt="" width="100%" height="65%" />
+                        <img src="/src/assets/svg/home-2.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-1" data-aos-delay="70" data-aos-duration="800">
                         <div class="details">
@@ -271,7 +271,7 @@
 
                 <div class="row row-2">
                     <div class="icons icons-2">
-                        <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
+                        <img src="/src/assets/icon/location.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-2" data-aos-delay="80" data-aos-duration="800">
                         <div class="details">
@@ -296,7 +296,7 @@
 
                 <div class="row row-3">
                     <div class="icons icons-3">
-                        <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
+                        <img src="/src/assets/icon/location.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-3" data-aos-delay="90" data-aos-duration="800">
                         <div class="details">
@@ -321,7 +321,7 @@
 
                 <div class="row row-4">
                     <div class="icons icons-4">
-                        <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
+                        <img src="/src/assets/icon/location.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-4" data-aos-delay="100" data-aos-duration="800">
                         <div class="details">
@@ -347,7 +347,7 @@
 
                 <div class="row row-5">
                     <div class="icons icons-5">
-                        <img src="./src/assets/svg/finish-flag 1.svg" alt="" width="100%" height="65%" />
+                        <img src="/src/assets/svg/finish-flag 1.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-5" data-aos-delay="110" data-aos-duration="800">
                         <div class="details">
@@ -385,7 +385,8 @@
                     <h4>Prof. Milind Khairnar (Faculty Incharge)</h4>
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
-                        <a href="mailto:milind.khairnar@sakec.ac.in" style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
+                        <a href="mailto:milind.khairnar@sakec.ac.in"
+                            style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
                     </div>
                     <div class="phone-area">
                         <i class="bi bi-telephone-fill"></i>
@@ -394,11 +395,12 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>Ashish Shetty (Student Council head)</h4>
+                    <h4>Ashish Shetty (E-Cell Council head)</h4>
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
-                            <a href="mailto:ashish.shetty@sakec.ac.in" style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
+                            <a href="mailto:ashish.shetty@sakec.ac.in"
+                                style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
                         </div>
                         <div class="phone-area">
                             <i class="bi bi-telephone-fill"></i>
@@ -409,15 +411,15 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>For Other Queries Contact Us At :</h4>
+                    <h4>For other queries :</h4>
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
                         <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">ecell@sakec.ac.in</a>
                     </div>
-                    <div class="phone-area">
-                        <!-- <i class="bi bi-telephone-fill"></i> -->
-                        <!-- <p>+91 93223 19066</p> -->
-                    </div>
+                    <!-- <div class="phone-area">
+                        <i class="bi bi-telephone-fill"></i>
+                         <p>+91 93223 19066</p>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -438,14 +440,14 @@
                 </a>
             </div>
             <h5>
-                entreupreneurship and innovation cell | SAKEC
+                entreupreneurship and inovation cell | SAKEC
             </h5>
         </div>
     </footer>
     <!-- Scripts -->
     <script src="./src/javascript/script.js"></script>
     <script src="./src/javascript/countdown.js"></script>
-    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
