fixed project pillar page

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -22,7 +22,7 @@
 
             <div id="nav-header" class="nav-header">
                 <div class="logo">
-                    <img src="/src/assets/svg/Ecell-Sakec-Logo.svg" alt="sakec ecell logo" width="100%" height="100%" />
+                    <img src="./src/assets/svg/Ecell-Sakec-Logo.svg" alt="sakec ecell logo" width="100%" height="100%" />
                 </div>
                 <div id="toggle" class="nav-toggle">
                     <span id="toggle-span"></span><span id="toggle-span"></span><span id="toggle-span"></span>
@@ -247,7 +247,7 @@
 
                 <div class="row row-1">
                     <div class="icons icons-1">
-                        <img src="/src/assets/svg/home-2.svg" alt="" width="100%" height="65%" />
+                        <img src="./src/assets/svg/home-2.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-1" data-aos-delay="70" data-aos-duration="800">
                         <div class="details">
@@ -271,7 +271,7 @@
 
                 <div class="row row-2">
                     <div class="icons icons-2">
-                        <img src="/src/assets/icon/location.svg" alt="" width="100%" height="65%" />
+                        <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-2" data-aos-delay="80" data-aos-duration="800">
                         <div class="details">
@@ -296,7 +296,7 @@
 
                 <div class="row row-3">
                     <div class="icons icons-3">
-                        <img src="/src/assets/icon/location.svg" alt="" width="100%" height="65%" />
+                        <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-3" data-aos-delay="90" data-aos-duration="800">
                         <div class="details">
@@ -321,7 +321,7 @@
 
                 <div class="row row-4">
                     <div class="icons icons-4">
-                        <img src="/src/assets/icon/location.svg" alt="" width="100%" height="65%" />
+                        <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-4" data-aos-delay="100" data-aos-duration="800">
                         <div class="details">
@@ -347,7 +347,7 @@
 
                 <div class="row row-5">
                     <div class="icons icons-5">
-                        <img src="/src/assets/svg/finish-flag 1.svg" alt="" width="100%" height="65%" />
+                        <img src="./src/assets/svg/finish-flag 1.svg" alt="" width="100%" height="65%" />
                     </div>
                     <section id="phase-5" data-aos-delay="110" data-aos-duration="800">
                         <div class="details">
@@ -385,41 +385,39 @@
                     <h4>Prof. Milind Khairnar (Faculty Incharge)</h4>
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
-                        <a href="mailto:milind.khairnar@sakec.ac.in"
-                            style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
+                        <a href="mailto:milind.khairnar@sakec.ac.in" style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
                     </div>
                     <div class="phone-area">
                         <i class="bi bi-telephone-fill"></i>
                         <p>+91 93223 19066</p>
                     </div>
                 </div>
-
+  
                 <div class="contact-card">
-                    <h4>Ashish Shetty (E-Cell Council head)</h4>
+                    <h4>Ashish Shetty (Student Council head)</h4>
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
-                            <a href="mailto:ashish.shetty@sakec.ac.in"
-                                style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
+                            <a href="mailto:ashish.shetty@sakec.ac.in" style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
                         </div>
                         <div class="phone-area">
                             <i class="bi bi-telephone-fill"></i>
                             <p>+91 77150 22166</p>
                         </div>
                     </div>
-
+  
                 </div>
-
+  
                 <div class="contact-card">
-                    <h4>For other queries :</h4>
+                    <h4>For Other Queries Contact Us At :</h4>
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
                         <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">ecell@sakec.ac.in</a>
                     </div>
-                    <!-- <div class="phone-area">
-                        <i class="bi bi-telephone-fill"></i>
-                         <p>+91 93223 19066</p>
-                    </div> -->
+                    <div class="phone-area">
+                        <!-- <i class="bi bi-telephone-fill"></i> -->
+                        <!-- <p>+91 93223 19066</p> -->
+                    </div>
                 </div>
             </div>
         </div>
@@ -440,7 +438,7 @@
                 </a>
             </div>
             <h5>
-                entreupreneurship and inovation cell | SAKEC
+                entreupreneurship and innovation cell | SAKEC
             </h5>
         </div>
     </footer>
