--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -21,9 +21,18 @@
 
 
             <div id="nav-header" class="nav-header">
-                <div class="logo">
-                    <img src="./src/assets/svg/Ecell-Sakec-Logo.svg" alt="sakec ecell logo" width="100%" height="100%" />
+                <div style="display: flex;gap:0 2em">
+                    <div class="logo">
+                        <img src="../common/img/sakec_logo_BLACK.png" alt="sakec ecell logo" width="100%"
+                            height="100%" />
+                    </div>
+                    <div class="logo">
+                        <img src="../common/img/e_cell_logo_BLACK.png" alt="sakec ecell logo" width="100%"
+                            height="100%" />
+                    </div>
+
                 </div>
+
                 <div id="toggle" class="nav-toggle">
                     <span id="toggle-span"></span><span id="toggle-span"></span><span id="toggle-span"></span>
                 </div>
@@ -385,29 +394,31 @@
                     <h4>Prof. Milind Khairnar (Faculty Incharge)</h4>
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
-                        <a href="mailto:milind.khairnar@sakec.ac.in" style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
+                        <a href="mailto:milind.khairnar@sakec.ac.in"
+                            style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
                     </div>
                     <div class="phone-area">
                         <i class="bi bi-telephone-fill"></i>
                         <p>+91 93223 19066</p>
                     </div>
                 </div>
-  
+
                 <div class="contact-card">
                     <h4>Ashish Shetty (Student Council head)</h4>
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
-                            <a href="mailto:ashish.shetty@sakec.ac.in" style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
+                            <a href="mailto:ashish.shetty@sakec.ac.in"
+                                style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
                         </div>
                         <div class="phone-area">
                             <i class="bi bi-telephone-fill"></i>
                             <p>+91 77150 22166</p>
                         </div>
                     </div>
-  
+
                 </div>
-  
+
                 <div class="contact-card">
                     <h4>For Other Queries Contact Us At :</h4>
                     <div class="email-area">
