comments added for countdown

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -46,7 +46,7 @@
                 <!-- <li> <a id="nav-a" href="#registration">Registration </a> </li> -->
                 <li> <a id="nav-a" href="#contact">Contact Us </a> </li>
                 <li> <a id="nav-a" href="https://ecellhome.pages.dev/projectpillar/faq/" target="_blank"
-                        rel="noopener noreferrer">FAQ</a> </li>
+                        rel="noopener noreferrer">FAQ</a></li>
             </ul>
         </div>
     </nav>
@@ -99,10 +99,8 @@
                             </div>
                             <div class="segment-title">hours</div>
                         </div>
-
-
+                        <!-- Minutes Card -->
                         <div class="container-segment">
-
                             <div class="segment">
                                 <div class="flip-card" data-minutes-tens>
                                     <div class="top">0</div>
@@ -115,9 +113,8 @@
                             </div>
                             <div class="segment-title">minutes</div>
                         </div>
-
+                        <!-- Seconds Card -->
                         <div class="container-segment">
-
                             <div class="segment">
                                 <div class="flip-card" data-seconds-tens>
                                     <div class="top">0</div>
