fixed nav project pillar

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -23,12 +23,16 @@
             <div id="nav-header" class="nav-header">
                 <div style="display: flex;gap:0 2em">
                     <div class="logo">
+                        <a href="https://www.shahandanchor.com/home/" target="_blank">
                         <img src="../common/img/sakec_logo_BLACK.png" alt="sakec ecell logo" width="100%"
                             height="100%" />
+                        </a>
                     </div>
                     <div class="logo">
+                        <a href="../index.html">
                         <img src="../common/img/e_cell_logo_BLACK.png" alt="sakec ecell logo" width="100%"
                             height="100%" />
+                        </a>
                     </div>
 
                 </div>
@@ -38,14 +42,14 @@
                 </div>
             </div>
             <ul id="nav-links" class="nav-links-disable">
-                <li> <a id="nav-a" href="https://ecellhome.pages.dev/">Home </a> </li>
+                <li> <a id="nav-a" href="../index.html">Home </a> </li>
                 <li> <a id="nav-a" href="#about">About </a> </li>
                 <li> <a id="nav-a" href="#incentives">Incentives</a> </li>
                 <li> <a id="nav-a" href="#sponsors">Sponsors </a> </li>
                 <li> <a id="nav-a" href="#timeline">Timeline </a> </li>
                 <!-- <li> <a id="nav-a" href="#registration">Registration </a> </li> -->
                 <li> <a id="nav-a" href="#contact">Contact Us </a> </li>
-                <li> <a id="nav-a" href="https://ecellhome.pages.dev/projectpillar/faq/" target="_blank"
+                <li> <a id="nav-a" href="./faq/index.html" target="_blank"
                         rel="noopener noreferrer">FAQ</a></li>
             </ul>
         </div>
