team page updated and food fiesta para added

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -60,8 +60,7 @@
       <img src="./IMG_7118.jpg">
       <div class="all-text">
           <h1>About the Event</h1>
-              <p>Food Fiesta is one of the most loved and awaited event of SAKEC family. It is a foodie and friendly event that offers you a platform to pitch and sell your food products as a one-on-one business individual. You can experience the thrill of street food with a variety of flavours. </p>
-               <p>Food Fiesta aims to provide a potential platform for the youth to showcase their innovative foody ideas and ventures it to a worthy experience along with capital.Packaged or readymade food weren’t encouraged so the participants had to prepare them on spot. The entrepreneurship spirit was pumped and rouse to a high extent as the participants started selling food items in spite the challenges such as producing the dishes quick for the audience, managing the coupons and so on. This event was an escape from the typical, an appetite of pride where taste met excellence. </p>
+              <p>Food Fiesta is an annual event held by E-Cell to promote entrepreneurship and provide students with business exposure. For just one day, participants put up a stall. It gives them a glimpse of all the challenges they would encounter as a business. The individual gains the ability to solve problems and take on obstacles head-on. E-Cell makes sure to stand by them at every step of the way and directs their enterprise toward a profit margin. Additionally, the variety of cuisines and a joyous environment make this event a complete package.</p>
       </div>
   </div>
 </section>
