--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -78,7 +78,7 @@
               <a href="#"><img src="./asset/img/logos/spon-logo/medical_care_logo_template_social_media_-removebg-preview.png" alt="" /></a>
           </li>
               <li>
-                  <a href="#" target="_blank"><img src="./asset/img/logos/spon-logo/Copy_of_Millionaire_Kids_Club_2.png" alt="" />
+                  <a href="#"><img src="./asset/img/logos/spon-logo/Copy_of_Millionaire_Kids_Club_2.png" alt="" />
                </a>
               </li>
               <li>
