--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -75,14 +75,14 @@
       <div class="spon-in">
           <ul>
             <li>
-              <a href="#"><img src="./asset/img/logos/spon-logo/medical_care_logo_template_social_media_-removebg-preview.png" alt="" /></a>
+              <a><img src="./asset/img/logos/spon-logo/medical_care_logo_template_social_media_-removebg-preview.png" alt="" /></a>
           </li>
               <li>
-                  <a href="#"><img src="./asset/img/logos/spon-logo/Copy_of_Millionaire_Kids_Club_2.png" alt="" />
+                  <a><img src="./asset/img/logos/spon-logo/Copy_of_Millionaire_Kids_Club_2.png" alt="" />
                </a>
               </li>
               <li>
-                <a href="#"><img src="./asset/img/logos/spon-logo/logo2.png" alt="" />
+                <a><img src="./asset/img/logos/spon-logo/logo2.png" alt="" />
                </a>
             </li>
             
