fixed events section icons

--- a/events/index.html
+++ b/events/index.html
@@ -68,7 +68,7 @@
             <p> E-Cell SAKEC is pleased to bring to you SAKEC'S very first active podcast series, 'Epitome of Leaders' where we invite thriving Entrepreneurs to share their story and inspire us to be our most ideal selves.</p>
             <div class="podcast-links">
                 <a href=" https://www.youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ "><img src='./img/utube.png' class="podcast-icons"></a>
-                <a href="https://open.spotify.com/show/3OSAraUUX2OgsY8hstzd4l?si=iHybg1G7Tr6IBPd6gnGcGw&utm_source=copy-link "><img src='./img/spotify.png' class="podcast-icons"></a>
+                <a href="https://open.spotify.com/show/3OSAraUUX2OgsY8hstzd4l?si=iHybg1G7Tr6IBPd6gnGcGw&utm_source=copy-link "><img src='/events/img/spotify-logo.png' class="podcast-icons"></a>
                 <a href="https://music.amazon.in/podcasts/414fb720-24ed-4c12-90bf-05ded48178fc/epitome-of-leaders?ref=dm_sh_RyfO52I8BmyNw4e06ZIoNOrbq "><img src='./img/amusic.png' class="podcast-icons"></a>
             </div>
             <p class="read-more ">
