--- a/events/index.html
+++ b/events/index.html
@@ -92,7 +92,7 @@
             </ul>-->
         </div>
         <div class="description">
-            <h1>Shark Tank</h1>
+            <h1>Shark Tank 2020</h1>
 
             <p>E-Cell SAKEC organised Shark Tank even before Shark Tank was officially aired in India in 2020 where we encouraged students to start their own business venture as well as invited budding startups and gave them a chance to pitch their startups
                 to investors and have a chance to secure investments.</p>
@@ -151,11 +151,11 @@
 
             <p> On International Women's Day, E-Cell SAKEC organised a virtual event discussing about women entrepreneurs and how they affect the business sector, to promote entrepreneurship among women, raise awareness of the topic, and teach them more about
                 how to run a firm as well as how to lead and work in a team.</p>
-            <p class="read-more">
-                <!-- <a href="#">Read More</a> -->
+            <!-- <p class="read-more">
+                <a href="#">Read More</a>
                 <a href="#" target="_blank"> Read More<i class="bi bi-arrow-right-short" style="color: green;"></i></a>
                 
-            </p>
+            </p> -->
         </div>
     </div>
 
@@ -179,11 +179,11 @@
 
             <p>A CSR initiative by E-Cell in collaboration with India4Oceans where the members visited Juhu Beach and cleaned it up in hopes to make India a cleaner and greener place to live in as well as inspire others to keep their surroundings clean.
                 This event was also attended by personalities like Atul Khatri to spread as much awareness as possible.</p>
-            <p class="read-more">
-                <!-- <a href="#">Read More</a> -->
+            <!-- <p class="read-more">
+                <a href="#">Read More</a>
                 <a href="#" target="_blank">Read More<i class="bi bi-arrow-right-short" style="color: green;"></i></a>
                 
-            </p>
+            </p> -->
         </div>
     </div>
 
