change in content of about section of ff & nav bar updated

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -35,6 +35,7 @@
     <a href="../index.html"><img src="./asset/img/logos/sakec-logos/e_cell_logo_white.png" alt="logo" class="logo"></a>
     <ul class="links">
       <li><a href="../index.html">Home</a></li>
+      <li><a href="../events/index.html">Events</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#spon">Sponsors</a></li>
       <li><a href="#jury">Jury</a></li>
@@ -60,7 +61,9 @@
       <img src="./asset/img/about-img/about-img.jpg">
       <div class="all-text">
           <h1>About the Event</h1>
-              <p>Food Fiesta is an annual event held by E-Cell to promote entrepreneurship and provide students with business exposure. For just one day, participants put up a stall. It gives them a glimpse of all the challenges they would encounter as a business. The individual gains the ability to solve problems and take on obstacles head-on. E-Cell makes sure to stand by them at every step of the way and directs their enterprise toward a profit margin. Additionally, the variety of cuisines and a joyous environment make this event a complete package.</p>
+              <p>Food Fiesta is an annual event held by E-Cell to promote entrepreneurship and provide students with business exposure. For just one day, participants put up a stall. It gives them a glimpse of all the challenges they would encounter as a business. It offers a platform to pitch and sell your food products as a one-on-one business individual. </p>
+              <p>The individual gains the ability to solve problems and take on obstacles head-on.
+                E-Cell makes sure to stand by them at every step of the way and directs their enterprise toward a profit margin. Additionally, the variety of cuisines and a joyous environment make this event a complete package. The event was an escape from the typical, an appetite of pride where taste met excellence.</p>
       </div>
   </div>
 </section>
