incentives-proof of concept

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -22,25 +22,28 @@
 
             <div id="nav-header" class="nav-header">
                 <div style="display: flex;gap:0 2em">
+                    <!-- SAKEC_LOGO_WHITE -->
                     <div class="logo">
                         <a href="https://www.shahandanchor.com/home/" target="_blank">
-                        <img src="../common/img/sakec_logo_BLACK.png" alt="sakec ecell logo" width="100%"
-                            height="100%" />
+                            <img src="../common/img/sakec_logo_BLACK.png" alt="sakec ecell logo" width="100%"
+                                height="100%" />
                         </a>
                     </div>
+                    <!-- ECELLSAKEC LOGO -->
                     <div class="logo">
                         <a href="../index.html">
-                        <img src="../common/img/e_cell_logo_BLACK.png" alt="sakec ecell logo" width="100%"
-                            height="100%" />
+                            <img src="../common/img/e_cell_logo_BLACK.png" alt="sakec ecell logo" width="100%"
+                                height="100%" />
                         </a>
                     </div>
 
                 </div>
-
+                <!-- Navbar toggle for mobile devices -->
                 <div id="toggle" class="nav-toggle">
                     <span id="toggle-span"></span><span id="toggle-span"></span><span id="toggle-span"></span>
                 </div>
             </div>
+            <!--Navigation Links-->
             <ul id="nav-links" class="nav-links-disable">
                 <li> <a id="nav-a" href="../index.html">Home </a> </li>
                 <li> <a id="nav-a" href="#about">About </a> </li>
@@ -49,8 +52,7 @@
                 <li> <a id="nav-a" href="#timeline">Timeline </a> </li>
                 <!-- <li> <a id="nav-a" href="#registration">Registration </a> </li> -->
                 <li> <a id="nav-a" href="#contact">Contact Us </a> </li>
-                <li> <a id="nav-a" href="./faq/index.html" target="_blank"
-                        rel="noopener noreferrer">FAQ</a></li>
+                <li> <a id="nav-a" href="./faq/index.html" target="_blank" rel="noopener noreferrer">FAQ</a></li>
             </ul>
         </div>
     </nav>
@@ -62,16 +64,12 @@
         <!-- Hero Area -->
 
         <section id="home">
-
-            <!-- Hero Image -->
-
             <div class="home-wrapper">
+                <!-- Hero Image -->
                 <div class="hero-img">
                     <img src="./src/assets/svg/Project-Pillar-Logo.svg" alt="" height="100%" width="100%">
                 </div>
-
                 <!-- Count Down to Event  -->
-
                 <div class="counter-wrapper">
                     <h2> <span>Starts In</span></h2>
                     <div class="container">
@@ -135,7 +133,7 @@
                     </div>
                 </div>
 
-                <!-- Scroll down Animated -->
+                <!-- Scroll down Animation -->
 
                 <div class="scroll-down">
                     <a href="#timeline">Scroll Down To Register</a>
@@ -225,16 +223,17 @@
                         </p>
                     </div>
                 </div>
-                <!-- Secure your startup -->
+                <!-- Proof Of Concept -->
                 <div class="cards">
                     <div class="card-img-cont">
                         <img src="./src/assets/svg/incentitives/At the office-pana.svg" alt="" width="100%"
                             height="100%">
                     </div>
                     <div class="cards-details">
-                        <h4>Secure your incubators</h4>
-                        <p>Secure a position in reputable incubation that will support you along the way until your
-                            startup takes off and becomes successful. </p>
+                        <h4>Proof Of Concept</h4>
+                        <p>Find out whether your startup has the potential for real-world application and whether it is
+                            feasible enough to justify
+                            the expenses needed to support and develop it. </p>
                     </div>
                 </div>
             </div>
