proof of concept img change

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="/src/assets/icon/e_cell_logo.png" />
+    <link rel="icon" type="image/svg+xml" href="../common/img/e_cell_logo_WHITE.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Pillar</title>
@@ -226,7 +226,7 @@
                 <!-- Proof Of Concept -->
                 <div class="cards">
                     <div class="card-img-cont">
-                        <img src="./src/assets/svg/incentitives/At the office-pana.svg" alt="" width="100%"
+                        <img src="./src/assets/svg/incentitives/Consultative sales-pana.svg" alt="" width="100%"
                             height="100%">
                     </div>
                     <div class="cards-details">
