added logo to tabs

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
   <title>FoodFiesta</title>
-  <link rel="shortcut icon" href="./asset/img/logos/sakec-logos/e_cell_logo_white.png">
+  <link rel="icon" type="image/svg+xml" href="../common/img/e_cell_logo_BLACK_WHITE_BG.png" />
   <meta name="description" content="FoodFiesta">
   <meta name="keywords" content="FoodFiesta,About,Jury,Winners,Sakec">
 
